<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".AddItemActivity">

    <TextView
        android:id="@+id/addNewItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addInventoryItem"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/addItemNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addItemName"
        android:textSize="25sp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="48dp"
        app:layout_constraintTop_toBottomOf="@+id/addNewItemTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addItemNameEditText"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:inputType="text"
        android:hint="@string/addItemNameHint"
        android:textColorHint="@color/dark_grey"
        android:autofillHints=""
        android:layout_marginTop="0dp"
        android:gravity="center|start"
        app:layout_constraintTop_toBottomOf="@+id/addItemNameTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/addItemQuantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addItemQuantity"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="48dp"
        app:layout_constraintTop_toBottomOf="@+id/addItemNameEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addItemQuantityEditText"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:inputType="text"
        android:hint="@string/addItemQuantityHint"
        android:textColorHint="@color/dark_grey"
        android:autofillHints=""
        android:layout_marginTop="0dp"
        android:gravity="center|start"
        app:layout_constraintTop_toBottomOf="@+id/addItemQuantityTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/addItemCancelButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/addItemCancelButton"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/cyan"
        app:layout_constraintStart_toStartOf="@id/addItemQuantityEditText"
        app:layout_constraintTop_toBottomOf="@id/addItemQuantityEditText" />

    <Button
        android:id="@+id/addItemAddButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/addItemAddButton"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/cyan"
        app:layout_constraintEnd_toEndOf="@id/addItemQuantityEditText"
        app:layout_constraintTop_toBottomOf="@id/addItemQuantityEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>