<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageLogoView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/imageDescription"
        app:srcCompat="@drawable/inventory_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/imageLogoView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:inputType="text"
        android:hint="@string/enterUsername"
        android:textColorHint="@color/dark_grey"
        android:autofillHints=""
        android:layout_marginTop="35dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/loginTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:inputType="textPassword"
        android:hint="@string/enterPassword"
        android:textColorHint="@color/dark_grey"
        android:autofillHints=""
        android:layout_marginTop="15dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/registerAccount"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/cyan"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/loginAccount"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/cyan"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>