<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".AddItemActivity">

    <TextView
        android:id="@+id/editItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editItem"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/editItemNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editItemName"
        android:textSize="25sp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="48dp"
        app:layout_constraintTop_toBottomOf="@+id/editItemTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editItemNameEditText"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginTop="0dp"
        android:gravity="center|start"
        app:layout_constraintTop_toBottomOf="@+id/editItemNameTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/editItemQuantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editItemQuantity"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="48dp"
        app:layout_constraintTop_toBottomOf="@+id/editItemNameEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editItemQuantityEditText"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:inputType="text"
        android:hint="@string/addItemQuantityHint"
        android:textColorHint="@color/dark_grey"
        android:autofillHints=""
        android:layout_marginTop="0dp"
        android:gravity="center|start"
        app:layout_constraintTop_toBottomOf="@+id/editItemQuantityTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/editItemCancelButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/addItemCancelButton"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/cyan"
        app:layout_constraintStart_toStartOf="@id/editItemQuantityEditText"
        app:layout_constraintTop_toBottomOf="@id/editItemQuantityEditText" />

    <Button
        android:id="@+id/editItemEditButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/editItemButton"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/cyan"
        app:layout_constraintEnd_toEndOf="@id/editItemQuantityEditText"
        app:layout_constraintTop_toBottomOf="@id/editItemQuantityEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>